Fix custom scrollbars under chromium browsers.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -23,7 +23,6 @@
  --list-elem-3line-height:70px;
  --pq-album-header:68px;
  --pq-album-track:34px;
- scrollbar-color:var(--scrollbar-thumb-color) var(--scrollbar-track-color);
  --image-grid-factor:0;
  --dialog-list-max-width:1000px;
  --icon-size:24px;
@@ -75,6 +74,12 @@
 @supports not (width: min(10px, 5vw)) {
  :root {
   --bottom-nav-pad:0px;
+ }
+}
+
+@supports not selector(::-webkit-scrollbar) {
+ :root {
+  scrollbar-color:var(--scrollbar-thumb-color) var(--scrollbar-track-color);
  }
 }
 
